--- a/examples/example.html
+++ b/examples/example.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <link rel="stylesheet" type="text/css" href="mui.css">
+    <link rel="stylesheet" type="text/css" href="example.css">
     <title>mui</title>
 </head>
 <body>
@@ -13,55 +13,55 @@
 
     <div class="container-16">
 
-        <div class="grid grid-16">16</div>
+        <div class="grid-16">16</div>
 
         <br><br>
 
-        <div class="grid grid-1">1</div><div class="grid grid-15">15</div>
+        <div class="grid-1">1</div><div class="grid-15">15</div>
 
         <br><br>
 
-        <div class="grid grid-2">2</div><div class="grid grid-14">14</div>
+        <div class="grid-2">2</div><div class="grid-14">14</div>
 
         <br><br>
 
-        <div class="grid grid-3">3</div><div class="grid grid-13">13</div>
+        <div class="grid-3">3</div><div class="grid-13">13</div>
 
         <br><br>
 
-        <div class="grid grid-4">4</div><div class="grid grid-12">12</div>
+        <div class="grid-4">4</div><div class="grid-12">12</div>
 
         <br><br>
 
-        <div class="grid grid-5">5</div><div class="grid grid-11">11</div>
+        <div class="grid-5">5</div><div class="grid-11">11</div>
 
         <br><br>
 
-        <div class="grid grid-6">6</div><div class="grid grid-10">10</div>
+        <div class="grid-6">6</div><div class="grid-10">10</div>
 
         <br><br>
 
-        <div class="grid grid-7">7</div><div class="grid grid-9">9</div>
+        <div class="grid-7">7</div><div class="grid-9">9</div>
 
         <br><br>
 
-        <div class="grid grid-8">8</div><div class="grid grid-8">8</div>
+        <div class="grid-8">8</div><div class="grid-8">8</div>
 
         <br><br><br>
 
-        <div class="grid grid-1">1</div><div class="grid grid-1">1</div><div class="grid grid-1">1</div><div class="grid grid-1">1</div><div class="grid grid-1">1</div><div class="grid grid-1">1</div><div class="grid grid-1">1</div><div class="grid grid-1">1</div><div class="grid grid-1">1</div><div class="grid grid-1">1</div><div class="grid grid-1">1</div><div class="grid grid-1">1</div><div class="grid grid-1">1</div><div class="grid grid-1">1</div><div class="grid grid-1">1</div><div class="grid grid-1">1</div>
+        <div class="grid-1">1</div><div class="grid-1">1</div><div class="grid-1">1</div><div class="grid-1">1</div><div class="grid-1">1</div><div class="grid-1">1</div><div class="grid-1">1</div><div class="grid-1">1</div><div class="grid-1">1</div><div class="grid-1">1</div><div class="grid-1">1</div><div class="grid-1">1</div><div class="grid-1">1</div><div class="grid-1">1</div><div class="grid-1">1</div><div class="grid-1">1</div>
 
         <br><br>
 
-        <div class="grid grid-2">2</div><div class="grid grid-2">2</div><div class="grid grid-2">2</div><div class="grid grid-2">2</div><div class="grid grid-2">2</div><div class="grid grid-2">2</div><div class="grid grid-2">2</div><div class="grid grid-2">2</div>
+        <div class="grid-2">2</div><div class="grid-2">2</div><div class="grid-2">2</div><div class="grid-2">2</div><div class="grid-2">2</div><div class="grid-2">2</div><div class="grid-2">2</div><div class="grid-2">2</div>
 
         <br><br>
 
-        <div class="grid grid-4">4</div><div class="grid grid-4">4</div><div class="grid grid-4">4</div><div class="grid grid-4">4</div>
+        <div class="grid-4">4</div><div class="grid-4">4</div><div class="grid-4">4</div><div class="grid-4">4</div>
 
         <br><br>
 
-        <div class="grid grid-8">8</div><div class="grid grid-8">8</div>
+        <div class="grid-8">8</div><div class="grid-8">8</div>
 
     </div>
 
